--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="description" content="Visually compare your weight to animals, celebrities, everyday objects, and more. See how you stack up with our interactive scale and chart visualizations!" />
     <meta name="author" content="WeightVs.com" />
     <meta name="keywords" content="weight comparison, weight vs, scale comparison, weight calculator, how much do I weigh, weight visualization" />
+    <meta name="google-adsense-account" content="ca-pub-8789553754421485">
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="WeightVs.com: Compare Your Weight to Anything!" />
