--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <meta name="twitter:title" content="WeightVs.com: Compare Your Weight to Anything!" />
     <meta name="twitter:description" content="Visually compare your weight to animals, celebrities, everyday objects, and more. See how you stack up!" />
     <meta name="twitter:image" content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚖️</text></svg>" />
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8789553754421485"
+     crossorigin="anonymous"></script>
     
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚖️</text></svg>">
   </head>
