--- a/index.html
+++ b/index.html
@@ -11,32 +11,33 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WeightVs.com - Compare Your Weight to Anything!</title>
-    <meta name="description" content="Visually compare your weight to animals, celebrities, everyday objects, and more. See how you stack up with our interactive scale and chart visualizations!" />
+    <title>WeightVs.com: Body Weight Calculators & Comparisons | BMI, Calories, Percentile, Space Weight</title>
+    <meta name="description" content="Calculate your BMI, daily calorie needs, and weight percentile. Visually compare your weight to animals, objects, and even planets with our interactive tools. Start your health journey today!" />
+    <meta name="keywords" content="weight calculator, BMI calculator, calorie calculator, weight percentile, weight comparison, weight in space, body weight tools, health metrics, compare weight" />
     <meta name="author" content="WeightVs.com" />
-    <meta name="keywords" content="weight comparison, weight vs, scale comparison, weight calculator, how much do I weigh, weight visualization" />
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="WeightVs.com: Compare Your Weight to Anything!" />
-    <meta property="og:description" content="Visually compare your weight to animals, celebrities, everyday objects, and more. See how you stack up with interactive scale and chart visualizations!" />
+   <meta property="og:title" content="WeightVs.com: Your Ultimate Health & Weight Calculator Hub!" />
+    <meta property="og:description" content="Discover your ideal weight with BMI, calorie, and percentile calculators. Visually compare your weight to animals, objects, and even planets with interactive tools at WeightVs.com. Get expert health insights." />
+    <meta property="og:site_name" content="WeightVs.com" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://weightvs.com/" />
-    <meta property="og:image" content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚖️</text></svg>" />
+    <meta property="og:image" content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%232563EB%22>⚖️</text></svg>" />
     <meta property="og:image:width" content="100" />
     <meta property="og:image:height" content="100" />
-    <meta property="og:site_name" content="WeightVs.com" />
 
     <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@weightvs" />
-    <meta name="twitter:title" content="WeightVs.com: Compare Your Weight to Anything!" />
-    <meta name="twitter:description" content="Visually compare your weight to animals, celebrities, everyday objects, and more. See how you stack up!" />
-    <meta name="twitter:image" content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚖️</text></svg>" />
+    <meta name="twitter:title" content="WeightVs.com: Your Ultimate Health & Weight Calculator Hub!" />
+    <meta name="twitter:description" content="Discover your ideal weight with BMI, calorie, and percentile calculators. Visually compare your weight to animals, objects, and even planets with interactive tools at WeightVs.com. Get expert health insights." />
+    <link rel="canonical" href="https://www.weightvs.com/" />
+    <meta name="twitter:image" content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%232563EB%22>⚖️</text></svg>" />
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8789553754421485"
      crossorigin="anonymous"></script>
     
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚖️</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%232563EB%22>⚖️</text></svg>">
   </head>
 
   <body>
