--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WeightVs.com: Body Weight Calculators & Comparisons | BMI, Calories, Percentile, Space Weight</title>
-    <meta name="description" content="Calculate your BMI, daily calorie needs, and weight percentile. Visually compare your weight to animals, objects, and even planets with our interactive tools. Start your health journey today!" />
+    <title>Body Weight Calculators & Comparisons | BMI, Calories, Percentile, Space Weight</title>
+    <meta name="description" content="Calculate your BMI, daily calorie needs, and weight percentile. Compare your weight to animals, objects, or celebrities with our interactive tools. Start your health journey today!" />
     <meta name="keywords" content="weight calculator, BMI calculator, calorie calculator, weight percentile, weight comparison, weight in space, body weight tools, health metrics, compare weight" />
     <meta name="author" content="WeightVs.com" />
 
     <!-- Open Graph Meta Tags -->
    <meta property="og:title" content="WeightVs.com: Your Ultimate Health & Weight Calculator Hub!" />
-    <meta property="og:description" content="Discover your ideal weight with BMI, calorie, and percentile calculators. Visually compare your weight to animals, objects, and even planets with interactive tools at WeightVs.com. Get expert health insights." />
+    <meta property="og:description" content="Discover your ideal weight with BMI, calorie, and percentile calculators. Visually compare your weight to animals, objects, or celebrities with interactive tools at WeightVs.com. Get expert health insights." />
     <meta property="og:site_name" content="WeightVs.com" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://weightvs.com/" />
