--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Body Weight Calculators & Comparisons | BMI, Calories, Percentile, Space Weight</title>
     <meta name="description" content="Calculate your BMI, daily calorie needs, and weight percentile. Compare your weight to animals, objects, or celebrities with our interactive tools. Start your health journey today!" />
-    <meta name="keywords" content="weight calculator, BMI calculator, calorie calculator, weight percentile, weight comparison, weight in space, body weight tools, health metrics, compare weight" />
+    <meta name="keywords" content="weight calculator, BMI calculator, calorie calculator, weight percentile, weight comparison, weight in space, body weight tools, health metrics, compare weight, health insights, health calculators" />
     <meta name="author" content="WeightVs.com" />
 
     <!-- Open Graph Meta Tags -->
