--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     <meta name="author" content="WeightVs.com" />
 
     <!-- Open Graph Meta Tags -->
-   <meta property="og:title" content="WeightVs.com: Your Ultimate Health & Weight Calculator Hub!" />
+    <meta property="og:title" content="WeightVs.com: Your Ultimate Health & Weight Calculator Hub!" />
     <meta property="og:description" content="Discover your ideal weight with BMI, calorie, and percentile calculators. Visually compare your weight to animals, objects, or celebrities with interactive tools at WeightVs.com. Get expert health insights." />
     <meta property="og:site_name" content="WeightVs.com" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://weightvs.com/" />
-    <meta property="og:image" content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%232563EB%22>⚖️</text></svg>" />
+    <link rel="apple-touch-icon" href="https://www.weightvs.com/logo.png">
+    <meta property="og:image" content="https://www.weightvs.com/logo.png" />
     <meta property="og:image:width" content="100" />
     <meta property="og:image:height" content="100" />
 
@@ -33,11 +34,12 @@
     <meta name="twitter:description" content="Discover your ideal weight with BMI, calorie, and percentile calculators. Visually compare your weight to animals, objects, and even planets with interactive tools at WeightVs.com. Get expert health insights." />
     <link rel="canonical" href="https://www.weightvs.com/" />
     <meta name="twitter:image" content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%232563EB%22>⚖️</text></svg>" />
+    <meta name="twitter:image" content="https://www.weightvs.com/logo.png" />
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8789553754421485"
      crossorigin="anonymous"></script>
     
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%232563EB%22>⚖️</text></svg>">
+    <link rel="icon" href="/lovable-uploads/favicon.ico">
   </head>
 
   <body>
