--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8789553754421485"
      crossorigin="anonymous"></script>
     
-    <link rel="icon" type="image/x-icon" href="/lovable-uploads/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
 
   <body>
